--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "critters": "^0.0.23",
     "eslint": "^8.54.0",
     "eslint-config-next": "^14.0.3",
     "firebase": "^10.7.2",
