--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "@supabase/supabase-js": "^2.81.1",
     "critters": "^0.0.23",
+    "dotenv": "^17.2.3",
     "eslint": "^8.54.0",
     "eslint-config-next": "^14.0.3",
-    "firebase": "^10.7.2",
     "framer-motion": "^10.16.5",
     "next": "^14.0.3",
     "openai": "^6.8.0",
